# Project-2-Final

./: main.py  pyproject.toml  readme.md
analysis/: pre_process.ipynb  surnames.txt
crawler/: crawler.py  file_shipper.py
gui/: controller.py  mainWindow.py
