[tool.poetry]
name = "unl-scraper"
version = "0.1.0"
description = ""
authors = ["George Willaman <gwillaman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
tqdm = "^4.66.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
PyQt6 = "^6.7.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
